--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -5,9 +5,9 @@
 
     <div class="row card-panel">
         <form class="" method="POST" action="{{ url_for('add_recipe')}}" enctype="multipart/form-data">
-            <div class="row">
+            <div class="row m0">
                 <div class="input-field col s12">
-                    <i class="fas fa-book amber-text text-lighten-1 prefix"></i>
+                    <i class="fas fa-book red-text prefix"></i>
                     <select id="category_name" name="category_name" class="validate" required>
                         <option value="" disabled selected>Choose recipe category</option>
                         {% for category in categories %}
@@ -17,37 +17,37 @@
                     <label for="category_name">Recipe category</label>
                 </div>
             </div>
-            <div class="row">
+            <div class="row m0">
                 <div class="input-field col s12">
-                    <i class="fas fa-utensils amber-text text-lighten-1 prefix"></i>
+                    <i class="fas fa-utensils red-text prefix"></i>
                     <input id="recipe_name" name="recipe_name" type="text" class="validate" required>
                     <label for="recipe_name">Recipe Name</label>
                 </div>
             </div>
-            <div class="row">
+            <div class="row m0">
                 <div class="input-field col s12">
-                    <i class="fas fa-scroll amber-text text-lighten-1 prefix"></i>
+                    <i class="fas fa-scroll red-text prefix"></i>
                     <textarea id="recipe_description" name="recipe_description" class="materialize-textarea validate" minlength="150" maxlength="500" data-length="500" required></textarea>
                     <label for="recipe_description">Description Of A Recipe / Minimum 150 </label>
                 </div>
             </div>
-            <div class="row">
+            <div class="row m0">
                 <h4>Ingredients</h4>
                 <div class="ingr_input_cont input-field col s12 l10">
-                    <i class="fas fa-list-alt amber-text text-lighten-1 prefix"></i>
+                    <i class="fas fa-list-alt red-text prefix"></i>
                     <input id="ingredients_add" name="ingredients_add" type="text" class="validate">
                     <label for="ingredients_add">Add ingredient</label>
                 </div>
                 <div class="input-field col s12 l2 right">
-                    <button class="btn add_list_item waves-effect waves-light" type="button">
+                    <button class="btn add_list_item waves-effect waves-light btn-red red darken-1" type="button">
                         Add Ingredient
                     </button>
                 </div>
             </div>
-            <div class="row">
+            <div class="row m0">
                 <h4>Method</h4>
                 <div class="input-field col s12">
-                    <i class="fas fa-list-ol amber-text text-lighten-1 prefix"></i>
+                    <i class="fas fa-list-ol red-text prefix"></i>
                     <textarea id="step_one" name="methods" class="materialize-textarea validate" required></textarea>
                     <label for="step_one">Step One</label>
                 </div>
@@ -62,39 +62,39 @@
                     <label for="step_three">Step Three</label>
                 </div>
             </div>
-            <div class="row">
+            <div class="row m0">
                 <div class="input-field col s12 l6">
-                    <i class="fas fa-clock amber-text text-lighten-1 prefix"></i>
+                    <i class="fas fa-clock red-text prefix"></i>
                     <input id="prep_time" name="prep_time" type="number" min="1" max="600" class="validate" required>
                     <label for="prep_time">Preparation Time / Minutes</label>
                 </div>
                 <div class="input-field col s12 l6">
                     <i class="prefix"></i>
-                    <input id="cook_time" name="cook_time" type="number" min="1" max="600" class="validate" required>
+                    <input id="cook_time" name="cook_time" type="number" min="0" max="600" class="validate" required>
                     <label for="cook_time">Cook Time / Minutes</label>
                 </div>
             </div>
-            <div class="row">
+            <div class="row m0">
                 <div class="file-field input-field col s12">
-                    <div class="btn right">
+                    <div class="btn waves-effect waves-light btn-red red darken-1 right">
                         <span>Upload Image</span>
                         <input type="file" name="recipe_image" required>
                     </div>
                     <div class="file-path-wrapper">
-                        <i class="fas fa-image amber-text text-lighten-1 prefix"></i>
+                        <i class="fas fa-image red-text prefix"></i>
                         <input class="file-path validate" type="text" placeholder="Upload your image">
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row m0">
                 <div class="col s12 center-align">
-                    <a href="{{ url_for('get_recipe') }}" class="btn-large waves-effect waves-light">
+                    <a onclick="history.back();" href="#!" class="btn waves-effect waves-light btn-red red darken-1">
                         Cancel <i class="fas fa-times-circle right"></i>
                     </a>
-                    <button class="btn-large waves-effect waves-light" type="submit">
+                    <button class="btn waves-effect waves-light red darken-1 btn-red" type="submit">
                         Add Recipe <i class="fas fa-file right"></i>
                     </button>
-            </div>
+                </div>
             </div>
         </form>
     </div>
