--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -13,7 +13,7 @@
         <a href="{{ url_for('get_recipe')}}"  class="black-text">RECIPE LIST</a>
         <i class="fas fa-caret-right red-text"></i>
         <span>{{recipes.recipe_name.upper()}}</span>
-        <a onclick="history.back();" href="#!" class=" waves-effect waves-light right black-text"> <i class="fas fa-caret-left red-text"></i> GO BACK</a>
+        <a onclick="history.back();" href="#!" class="right black-text"> <i class="fas fa-caret-left red-text"></i> GO BACK</a>
     </div>
 </div>
 
@@ -25,7 +25,51 @@
     </div>
     <div class="col s12 m8">
         <div class="card-content">
-            <p class="recipe-title">{{recipes.recipe_name}}</p>
+            {% if session.user and is_admin %}
+            <div class="center">
+                <a  href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="red waves-effect waves-light btn-red darken-1 btn-small">
+                    <i class="fas fa-edit"></i> EDIT
+                </a>&emsp;&emsp;
+                <a href="#modal1" class=" btn-small waves-effect waves-light btn-red red darken-1 modal-trigger ">
+                    <i class="fas fa-times-circle"></i> DELETE
+                </a>
+            </div>
+            <div id="modal1" class="modal">
+                <div class="modal-content">
+                    <h4>Modal Header</h4>
+                    <p>A bunch of text</p>
+                </div>
+                <div class="modal-footer">
+                    <a href="{{ url_for('delete_recipe', recipe_id=recipes._id)}}"
+                        class="modal-close waves-effect waves-green btn-flat">Yes remove this Item</a>
+                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">No</a>
+                </div>
+            </div>
+            {% elif session.user == recipes.recipe_by %}
+            <div class="center">
+                <a  href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="red waves-effect waves-light btn-red darken-1 btn-small">
+                    <i class="fas fa-edit"></i> EDIT
+                </a>&emsp;&emsp;
+                <a href="#modal1" class=" btn-small waves-effect waves-light btn-red red darken-1 modal-trigger ">
+                    <i class="fas fa-times-circle"></i> DELETE
+                </a>
+            </div>
+            <div id="modal1" class="modal">
+                <div class="modal-content">
+                    <h4>Modal Header</h4>
+                    <p>A bunch of text</p>
+                </div>
+                <div class="modal-footer">
+                    <a href="{{ url_for('delete_recipe', recipe_id=recipes._id)}}"
+                        class="modal-close waves-effect waves-green btn-flat">Yes remove this Item</a>
+                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">No</a>
+                </div>
+            </div>
+            {% endif %}
+
+            <p class="recipe-title">
+                {{recipes.recipe_name}}
+            </p>
             <span>Recipe by <em class="red-text">{{recipes.recipe_by.capitalize()}}</em></span>
             <div class="row mb1">
                 <div class="col">
@@ -34,8 +78,12 @@
                 <div class="col">
                     <em class="red-text">Prep Time: </em>
                     <strong>{{recipes.prep_time}} min</strong>&emsp;
+                    {% if recipes.cook_time == 0 %}
+                    <em class="red-text">No Cook Time</em>&emsp;
+                    {% else %}
                     <em class="red-text">Cook Time: </em>
                     <strong>{{recipes.cook_time}} min</strong>&emsp;
+                    {% endif %}
                 </div>
             </div>
             <div class="row mb1">
